feat: encrypt/decrypt UI rework, build script, theme colors
Amp-Thread-ID: https://ampcode.com/threads/T-019c7f8b-fa53-714b-b511-bf626fcf3f4e
Co-authored-by: Amp <amp@ampcode.com>